--- a/gallery.html
+++ b/gallery.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<video controls height=50% width=100%>
-			<source src="Safe.mov">
+			<source src="Safe.MOV">
 		</video>
 
 		<div class="w3-row">
